# seal-x-ros

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  WARNING.md  build.sh  clean.sh  package.xml
example/ckks_gray_scale/: CMakeLists.txt  ckks_gray_scale.cpp  ckks_gray_scale.hpp
example/ckks_gray_scale/include/ckks_gray_scale/: ckks_gray_scale.hpp
example/ckks_gray_scale/src/: ckks_gray_scale.cpp
example/dummy-msg/: CMakeLists.txt  package.xml
example/dummy-msg/include/dummy-msg/: data_pub.hpp  data_sub.hpp
example/dummy-msg/include/dummy_msg/: data_pub.hpp  data_sub.hpp
example/dummy-msg/src/: data_pub.cpp  data_sub.cpp
example/webcam-msg/: CMakeLists.txt  package.xml
example/webcam-msg/include/webcam_msg/: webcam_msg_lib.hpp  webcam_pub.hpp  webcam_sub.hpp
example/webcam-msg/src/: webcam_msg_lib.cpp  webcam_pub.cpp  webcam_sub.cpp
example/webcam_msg/include/webcam_msg/: ckks_gray_scale.hpp
example/webcam_msg/src/: ckks_gray_scale.cpp
include/seal_x_ros/: seal_client_node.hpp  seal_decryptor.hpp  seal_encryptor.hpp  seal_evaluator.hpp  seal_parms_and_keys.hpp  seal_server_node.hpp  sxr_ciphertext.hpp  sxr_client_node.hpp  sxr_decryptor.hpp  sxr_encryptor.hpp  sxr_evaluator.hpp  sxr_lib.hpp  sxr_operations.hpp  sxr_parms_and_keys.hpp  sxr_server_node.hpp
install/seal_msgs/include/seal_msgs/seal_msgs/msg/: rosidl_generator_c__visibility_control.h  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h  seal_data.h  seal_data.hpp
install/seal_msgs/include/seal_msgs/seal_msgs/msg/detail/: seal_data__builder.hpp  seal_data__functions.c  seal_data__functions.h  seal_data__rosidl_typesupport_fastrtps_c.h  seal_data__rosidl_typesupport_fastrtps_cpp.hpp  seal_data__rosidl_typesupport_introspection_c.h  seal_data__rosidl_typesupport_introspection_cpp.hpp  seal_data__struct.h  seal_data__struct.hpp  seal_data__traits.hpp  seal_data__type_support.c  seal_data__type_support.cpp  seal_data__type_support.h
install/seal_msgs/include/seal_msgs/seal_msgs/srv/: key_exchange.h  key_exchange.hpp
install/seal_msgs/include/seal_msgs/seal_msgs/srv/detail/: key_exchange__builder.hpp  key_exchange__functions.c  key_exchange__functions.h  key_exchange__rosidl_typesupport_fastrtps_c.h  key_exchange__rosidl_typesupport_fastrtps_cpp.hpp  key_exchange__rosidl_typesupport_introspection_c.h  key_exchange__rosidl_typesupport_introspection_cpp.hpp  key_exchange__struct.h  key_exchange__struct.hpp  key_exchange__traits.hpp  key_exchange__type_support.c  (+2 more)
install/seal_msgs/share/ament_index/resource_index/rosidl_interfaces/: seal_msgs
install/seal_msgs/share/seal_msgs/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.xml  package.zsh
install/seal_msgs/share/seal_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_seal_msgs__rosidl_generator_cExport-noconfig.cmake  export_seal_msgs__rosidl_generator_cExport.cmake  export_seal_msgs__rosidl_generator_cppExport.cmake  export_seal_msgs__rosidl_generator_pyExport-noconfig.cmake  export_seal_msgs__rosidl_generator_pyExport.cmake  export_seal_msgs__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_seal_msgs__rosidl_typesupport_fastrtps_cExport.cmake  export_seal_msgs__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_seal_msgs__rosidl_typesupport_fastrtps_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake  seal_msgsConfig.cmake  seal_msgs__rosidl_typesupport_cExport-noconfig.cmake  seal_msgs__rosidl_typesupport_cExport.cmake  seal_msgs__rosidl_typesupport_cppExport-noconfig.cmake  seal_msgs__rosidl_typesupport_cppExport.cmake  seal_msgs__rosidl_typesupport_introspection_cExport-noconfig.cmake  seal_msgs__rosidl_typesupport_introspection_cExport.cmake  seal_msgs__rosidl_typesupport_introspection_cppExport-noconfig.cmake  seal_msgs__rosidl_typesupport_introspection_cppExport.cmake
install/seal_msgs/share/seal_msgs/msg/: SealData.idl
install/seal_msgs/share/seal_msgs/srv/: KeyExchange.idl  KeyExchange.srv  KeyExchange_Request.msg
install/seal_ros_nodes/share/ament_index/resource_index/parent_prefix_path/: seal_ros_nodes
install/seal_ros_nodes/share/seal_ros_nodes/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.xml  package.zsh
install/seal_ros_nodes/share/seal_ros_nodes/cmake/: seal_ros_nodesConfig.cmake
install/seal_ros_nodes/share/seal_ros_nodes/config/: encryption_params_bfv.yaml  encryption_params_ckks.yaml
install/seal_ros_nodes/share/seal_ros_nodes/launch/: bfv.py
launch/: launch_client.py  launch_server.py
log/: latest_build
seal_msgs/: CMakeLists.txt  package.xml
seal_msgs/srv/: KeyExchange.srv
seal_ros_nodes/: CMakeLists.txt  package.xml
seal_ros_nodes/include/seal_ros_nodes/: seal_client_node.hpp  seal_context.hpp  seal_decryptor.hpp  seal_encryptor.hpp  seal_evaluator.hpp  seal_parms_and_keys.hpp  seal_server_node.hpp  sxr_lib.hpp
seal_ros_nodes/launch/: bfv.py  ckks.py
seal_ros_nodes/src/: seal_client_node.cpp  seal_context.cpp  seal_decryptor.cpp  seal_encryptor.cpp  seal_evaluator.cpp  seal_parms_and_keys.cpp  seal_server_node.cpp  sxr_lib.cpp
src/: seal_client_node.cpp  seal_decryptor.cpp  seal_encryptor.cpp  seal_evaluator.cpp  seal_parms_and_keys.cpp  seal_server_node.cpp  sxr_ciphertext.cpp  sxr_client_node.cpp  sxr_decryptor.cpp  sxr_encryptor.cpp  sxr_evaluator.cpp  sxr_lib.cpp  sxr_operations.cpp  sxr_parms_and_keys.cpp  sxr_server_node.cpp
src/seal_msgs/: package.xml
src/seal_ros_nodes/: CMakeLists.txt  package.xml
src/seal_ros_nodes/include/seal_x_ros/: seal_client_node.hpp  seal_server_node.hpp
srv/: KeyExchange.srv  OperationRequest.srv  ServerMessage.srv
test/dummy-msg/include/dummy-msg/: data_sub.hpp
test/dummy-msg/src/: data_pub.cpp  data_sub.cpp
