<?xml version="1.0"?>
<package format="3">
  <name>seal_x_ros</name>
  <version>0.0.1</version>
  <description>A ROS2 package to use SEAL for FHE</description>
  <maintainer email="contact@jdumezy.com">jdumezy</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <build_depend>SEAL</build_depend>
  
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

