<?xml version="1.0"?>
<package format="3">
  <name>seal_ros_nodes</name>
  <version>0.0.1</version>
  <description>A package containing nodes for using SEAL</description>
  <maintainer email="contact@jdumezy.com">jdumezy</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <build_depend>seal_msgs</build_depend>
  <build_depend>SEAL</build_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

