<?xml version="1.0"?>
<package format="3">
  <name>dummy_msg</name>
  <version>1.0.0</version>
  <description>ROS2 package sending and reveiving random data</description>
  <maintainer email="contact@jdumezy.com">jdumezy</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>                               
   <build_type>ament_cmake</build_type> 
  </export> 
</package>
